<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:layout_above="@+id/password"
            android:layout_centerHorizontal="true"
            style="@style/EditText_first"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:inputType="textPassword"
            style="@style/EditText_classic"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Button_with_margin_top"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/classicbutton"
            android:text="@string/SIGN_IN"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>